--- a/Activity-Monitor/ActivityMonitor.Database/ActivityMonitor.Database.csproj
+++ b/Activity-Monitor/ActivityMonitor.Database/ActivityMonitor.Database.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ActivityMonitor\ActivityMonitor.csproj" />
+  </ItemGroup>
+
 </Project>
