--- a/Activity-Monitor/ActivityMonitor.GitHubInteraction/ActivityMonitor.GitHubInteraction.csproj
+++ b/Activity-Monitor/ActivityMonitor.GitHubInteraction/ActivityMonitor.GitHubInteraction.csproj
@@ -6,10 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Octokit" Version="0.36.0" />
-    <PackageReference Include="System.Security.Permissions" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ActivityMonitor.Database\ActivityMonitor.Database.csproj" />
   </ItemGroup>
 
 </Project>
