--- a/Activity-Monitor/ActivityMonitor.Database/ActivityMonitor.Database.csproj
+++ b/Activity-Monitor/ActivityMonitor.Database/ActivityMonitor.Database.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ActivityMonitor\ActivityMonitor.csproj" />
   </ItemGroup>
 
 </Project>
