added commits  & files seeding

--- a/Activity-Monitor/config.json
+++ b/Activity-Monitor/config.json
@@ -13,6 +13,14 @@
 	{
 	"name":"tcm",
 	"owner":"ogresed"
+	},
+	{
+	"name":"spending",
+	"owner":"ogresed"
+	},
+	{
+	"name":"Activity-Monitor",
+	"owner":"Phoenix-616"
 	}
 	]
 }
